--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:back": "node generateData && json-server --watch db.json --port 3000",
     "build": "vite build",
     "preview": "vite preview"
   },
